--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-<h1>うんこ！</h1>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>自サイト</title>
+    <style>
+        body {
+            background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            flex-direction: column;
+            font-family: Arial, sans-serif;
+        }
+        .button-container {
+            display: flex;
+            gap: 15px;
+        }
+        .btn {
+            background: #ff6f61;
+            color: white;
+            padding: 15px 30px;
+            border: none;
+            border-radius: 30px;
+            font-size: 18px;
+            cursor: pointer;
+            transition: 0.3s;
+            text-decoration: none;
+            display: inline-block;
+            text-align: center;
+        }
+        .btn:hover {
+            background: #d64b43;
+            transform: scale(1.1);
+        }
+    </style>
+</head>
+<body>
+    <h1>なんかのSNS的なやつ↓</h1>
+    <div class="button-container">
+        <a href="https://www.google.com" class="btn">Google</a>
+        <a href="https://www.yahoo.co.jp" class="btn">Yahoo!</a>
+        <a href="https://www.bing.com" class="btn">Bing</a>
+    </div>
+</body>
+</html>
