--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
     <h1>なんかのSNS的なやつ↓</h1>
     <div class="button-container">
-        <a href="https://www.google.com" class="btn">Google</a>
+        <a href="https://scratch.mit.edu/users/Nihonjindayo_monohon/" class="btn">Scratch</a>
         <a href="https://www.yahoo.co.jp" class="btn">Yahoo!</a>
         <a href="https://www.bing.com" class="btn">Bing</a>
     </div>
